# agrow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  dtypes.py  main.py  pyproject.toml  requirements.txt  setup.py  using_example.ipynb
.github/workflows/: publish.yml
.scripts/: sanitize.sh  test_all.sh
agrow/: __init__.py  tensor.py
agrow/core/: __init__.py  _dtypes.py  biult_ins.py
agrow/math/: __init__.py
agrow/math/core/func/: func.c  func.h
agrow/math/func/: __init__.py  func.c  func.pyx  wrapped.c  wrapped.pyx
agrow/math/func/core/: func.c  func.h
agrow/math/linalg/core/: linalg.cc  linalg.h
agrow/math/src/: func.py
agrow/text/: __init__.py
agrow/text/tokenizers/: __init__.py  tokenizers_tests.py
agrow/text/vectorizers/: __init__.py
agrow/text/vectorizers/src/: count.py  utils.py  word2vec.py
tecode/: __init__.py
tecode/tokenizers/: __init__.py  tokenizers_tests.py
tecode/vectorizers/: __init__.py  vectorizers_tests.py
tecode/vectorizers/src/: base.py  tfidf.py
tokenizer/: __init__.py  base.py  punct.py  regex.py  tokenizer.py  tokenizer_base.py
tokenizers/: Dockerfile  __init__.py  base.py  punct.py  regex.py  tokenizer.py  tokenizers_tests.py
tokenizers/src/: base.py  regex.py  tokenizers.py
vectorizers/: Dockerfile  __init__.py  base.py  count.py  onehot.py  tfidf.py  word2vec.py
vectorizers/src/: utils.py
vectorizers/tests/: vectorizers_tests.py
